fix visibility and rsvp.
Need to figure out wtf is up with head.js not actually loading
more than 1 javascript file when you call

head.js('some/paths', 'definitely/more/than/one', '/and/then/an/extra', callback() { return; });

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -172,6 +172,7 @@ div#mainContainer {
   margin-left: 50%;
   margin-right: 50%;
   margin-top: 300px;
+  visibility: hidden;
 }
 
 p#snowmang {
